KULRICE-10596 Fixing button spacing for modal add line in collections

--- a/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/tabularData/uif-dataTable.less
+++ b/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/tabularData/uif-dataTable.less
@@ -89,6 +89,9 @@ table.dataTable tr.uif-collectionDeleteHighlight td.sorting_1 {
   width: 50px;
 }
 
+.dataTables_wrapper
+{margin-bottom: 40px}
+
 
 .dataTables_wrapper .row {
   margin-bottom: 12px;
