--- a/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/tabularData/uif-tableCollection.less
+++ b/rice-framework/krad-web/src/main/webapp/themes/kboot/stylesheets/tabularData/uif-tableCollection.less
@@ -89,3 +89,7 @@ div.uif-calculationField, div.uif-calculationField input {
 
 
 .uif-has-actions tr  td:last-of-type{width:1%; white-space:nowrap }
+
+.uif-disclosureContent > .uif-action {
+  margin-bottom: 15px;
+}
